--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ const perguntas = [
     {pergunta: "1️⃣ Qual data começou nossa história juntos?", resposta: "10/01/2022"},
     {pergunta: "2️⃣ Qual música lembra nós dois?", resposta: "saturno"},
     {pergunta: "3️⃣ Qual foi o nosso primeiro filme juntos?", resposta: "barbie, sei la moh kkk"},
-    {pergunta: "4️⃣ Aonde foi o nosso primeiro beijão?", resposta: "no alprendre da mãe"},
+    {pergunta: "4️⃣ Aonde foi o nosso primeiro beijão?", resposta: "no alpendre da mãe"},
     {pergunta: "5️⃣ Qual jogo mais jogamos juntos?", resposta: ["freefire", "minecraft"]},
     {pergunta: "6️⃣ Quem é mais romântico da relação?", resposta: "moh"},
     {pergunta: "7️⃣ Qual foi o presente mais especial que já te dei?", resposta: "aliança"},
